Implemented simple example of SabreDav card dav server for #1133

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,3 +13,6 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    carddav_debug:     false
+    carddav_browser:   false
