--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,13 @@
         "friendsofsymfony/http-cache-bundle": "^1.0",
         "willdurand/hateoas-bundle": "^1.0",
         "hautelook/templated-uri-bundle": "^2.0",
-        "willdurand/rest-extra-bundle": "^1.0"
+        "willdurand/rest-extra-bundle": "^1.0",
+        "sabre/dav": "2.1.7"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
+        "fzaninotto/faker": "^1.5"
     },
     "scripts": {
         "post-install-cmd": [
